Blurred the background image. Fixed issue #20

--- a/Kheech/Kheech.Web/Content/Site.css
+++ b/Kheech/Kheech.Web/Content/Site.css
@@ -30,7 +30,7 @@ textarea {
 }
 
 .homePage-body {
-    background-image: url("https://images.unsplash.com/photo-1502758930693-b8fb0f909327?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fcf0d50cb456e9902fc819fd55df8a52&auto=format&fit=crop&w=1050&q=80");
+    background-image: url("../uploads/BackgroundImage.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
